Use wrapper script for Maven command in build workflow

--- a/.github/workflows/build-an-deploy.yml
+++ b/.github/workflows/build-an-deploy.yml
@@ -51,7 +51,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: |
-          mvn -B verify sonar:sonar -Dsonar.project.settings=./sonar-project.properties
+          .\mvnw.cmd -B verify sonar:sonar -Dsonar.project.settings=./sonar-project.properties
         shell: cmd
 
         # Build Docker image
