--- a/.github/workflows/build-an-deploy.yml
+++ b/.github/workflows/build-an-deploy.yml
@@ -63,7 +63,8 @@ jobs:
       - name: Log in to DockerHub
         shell: powershell
         run: |
-          docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"
+          $password = "${{ secrets.DOCKER_PASSWORD }}"
+          $password | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
       - name: Push Docker image
         run: |
           docker push carikk/quality-gate:latest
